--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ project-version = "1.0"
 
 # Language Versions
 kt = "1.8"
-java = "11"
+java = "18"
 
 ## SDK Versions
 minSdk = "21"
@@ -15,40 +15,43 @@ versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-accompanist = "0.29.0-alpha"
+accompanist = "0.31.0-alpha"
 android-material = "1.7.0"
-androidx-activity = "1.7.0-beta01"
-androidx-compose = "1.4.0-alpha04"
-androidx-compose-compiler = "1.4.2"
-androidx-compose-material3 = "1.1.0-alpha06"
+androidx-activity = "1.7.1"
+androidx-compose = "1.5.0-alpha03"
+androidx-compose-compiler = "1.4.6"
+androidx-compose-material3 = "1.1.0-rc01"
 androidx-compose-paging = "1.0.0-alpha18"
 androidx-constraintlayout = "1.0.1"
 androidx-core-ktx = "1.9.0"
-androidx-lifecycle = "2.6.0-beta01"
-androidx-navigation = "2.6.0-alpha05"
+androidx-lifecycle = "2.6.1"
+androidx-navigation = "2.6.0-beta01"
 androidx-room = "2.5.0"
 chrisbanes-snapper = "0.3.0"
-coil = "2.2.2"
+coil = "2.3.0"
 coroutines = "1.6.4"
-desugar-jdk-libs = "1.2.2"
-gradle-plugin-android-build-tools = "7.4.0"
+desugar-jdk-libs = "2.0.3"
+gradle-plugin-android-build-tools = "7.4.2"
 gradle-plugin-buildkonfig = "0.7.0"
 gradle-plugin-dependency-check = "0.42.0"
 gradle-plugin-detekt = "1.22.0"
 gradle-plugin-ktlint = "11.0.0"
 gradle-plugin-spotless = "6.10.0"
 kermit = "1.2.2"
-koin = "3.2.2"
+koin-android = "3.4.0"
+koin-androidx-compose = "3.4.3"
+koin-core = "3.4.0"
+koin-test = "3.4.0"
 korlibs-klock = "2.2.0"
-kotlin = "1.8.10"
+kotlin = "1.8.20"
 kotlinx-dateTime = "0.4.0"
-kotlinx-serialization = "1.4.1"
-ksp = "1.8.10-1.0.9"
-ktor = "2.2.2"
+kotlinx-serialization = "1.5.0"
+ksp = "1.8.20-1.0.11"
+ktor = "2.2.4"
 kuuuurt-multiplatform-paging = "0.6.2"
-moko-resources = "0.20.1"
+moko-resources = "0.22.0"
 multiplatformSettings = "1.0.0"
-nativecoroutines = "0.13.3"
+nativecoroutines = "1.0.0-ALPHA-8"
 realm = "1.6.0"
 squareup-leakcanary = "2.9.1"
 squareup-okio = "3.2.0"
@@ -57,8 +60,8 @@ testing-junit = "4.13.2"
 testing-junit5 = "5.9.1"
 testing-junitext = "1.1.4-alpha05"
 testing-kotest = "5.5.4"
-testing-turbine = "0.12.1"
-uuid-multiplatform = "0.6.0"
+testing-turbine = "0.12.3"
+uuid-multiplatform = "0.7.0"
 
 
 [plugins]
@@ -115,16 +118,18 @@ gradle-plugin-kotlinSerialization = { module = "org.jetbrains.kotlin:kotlin-seri
 gradle-plugin-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 gradle-plugin-ktlint = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "gradle-plugin-ktlint" }
 gradle-plugin-mokoResources = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
+gradle-plugin-nativecoroutines = { module = "com.rickclephas.kmp:kmp-nativecoroutines-gradle-plugin", version.ref = "nativecoroutines" }
 gradle-plugin-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "androidx-navigation" }
 gradle-plugin-realm = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
 gradle-plugin-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "gradle-plugin-spotless" }
 kermit-crashlytics = { module = "co.touchlab:kermit-crashlytics", version.ref = "kermit" }
 kermit-log = { module = "co.touchlab:kermit", version.ref = "kermit" }
-koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
-koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
-koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation", version.ref = "koin" }
-koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-android" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin-androidx-compose" }
+koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation", version.ref = "koin-android" }
+koin-androidx-workmanager = { module = "io.insert-koin:koin-androidx-workmanager", version.ref = "koin-android" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-core" }
+koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin-test" }
 korlibs-klock = { module = "com.soywiz.korlibs.klock:klock", version.ref = "korlibs-klock" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlin-stdlib-jdk = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
