--- a/petsearch-ios/Podfile
+++ b/petsearch-ios/Podfile
@@ -6,5 +6,5 @@ target 'petsearch-ios' do
   pod 'SDWebImageSwiftUI'
   pod 'SDWebImageSVGCoder'
   pod 'ToastSwiftUI'
-  pod 'KMPNativeCoroutinesAsync', '0.13.3'
+  pod 'KMPNativeCoroutinesAsync', '1.0.0-ALPHA-8'
 end
