--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,64 +5,65 @@ project-version = "1.0"
 
 # Language Versions
 kt = "1.8"
-java = "18"
+java = "11"
 
 ## SDK Versions
 minSdk = "21"
-targetSdk = "33"
-compileSdk = "33"
+targetSdk = "34"
+compileSdk = "34"
 versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-accompanist = "0.31.2-alpha"
-android-material = "1.7.0"
-androidx-activity = "1.7.1"
-androidx-compose = "1.5.0-alpha04"
-androidx-compose-compiler = "1.4.7"
-androidx-compose-material3 = "1.1.0"
-androidx-compose-paging = "1.0.0-alpha18"
+accompanist = "0.32.0"
+android-material = "1.9.0"
+androidx-activity = "1.7.2"
+androidx-compose = "1.5.0"
+androidx-compose-compiler = "1.5.2"
+androidx-compose-material3 = "1.1.1"
+androidx-compose-paging = "3.2.0"
 androidx-constraintlayout = "1.0.1"
-androidx-core-ktx = "1.9.0"
+androidx-core-ktx = "1.10.1"
 androidx-lifecycle = "2.6.1"
-androidx-navigation = "2.6.0-beta01"
-androidx-room = "2.5.0"
+androidx-navigation = "2.7.0"
+androidx-room = "2.5.2"
 chrisbanes-snapper = "0.3.0"
 coil = "2.4.0"
 desugar-jdk-libs = "2.0.3"
-gradle-plugin-android-build-tools = "8.0.1"
-gradle-plugin-buildkonfig = "0.7.0"
-gradle-plugin-dependency-check = "0.42.0"
-gradle-plugin-detekt = "1.22.0"
+gradle-plugin-android-build-tools = "8.1.1"
+gradle-plugin-buildkonfig = "0.13.3"
+gradle-plugin-dependency-check = "0.47.0"
+gradle-plugin-detekt = "1.23.0"
 gradle-plugin-ktlint = "11.0.0"
-gradle-plugin-spotless = "6.10.0"
+gradle-plugin-spotless = "6.19.0"
 kermit = "1.2.2"
-koin-android = "3.4.0"
-koin-androidx-compose = "3.4.4"
-koin-core = "3.4.0"
-koin-test = "3.4.0"
+koin-android = "3.4.3"
+koin-androidx-compose = "3.4.6"
+koin-core = "3.4.3"
+koin-core-coroutines = "3.4.3"
+koin-test = "3.4.3"
 korlibs-klock = "2.2.0"
-kotlin = "1.8.21"
-kotlinx-coroutines = "1.7.1"
+kotlin = "1.9.0"
+kotlinx-coroutines = "1.7.3"
 kotlinx-dateTime = "0.4.0"
 kotlinx-serialization = "1.5.1"
-ksp = "1.8.21-1.0.11"
-ktor = "2.3.1"
+ksp = "1.9.0-1.0.12"
+ktor = "2.3.3"
 kuuuurt-multiplatform-paging = "0.6.2"
 moko-resources = "0.23.0"
 multiplatformSettings = "1.0.0"
-realm = "1.9.0"
+realm = "1.10.2"
 rickclephas-nativecoroutines = "1.0.0-ALPHA-10"
 rickclephas-kmm-viewmodel = "1.0.0-ALPHA-9"
-squareup-leakcanary = "2.9.1"
-squareup-okio = "3.2.0"
-testing-arch-core = "2.1.0"
+squareup-leakcanary = "2.12"
+squareup-okio = "3.4.0"
+testing-arch-core = "2.2.0"
 testing-junit = "4.13.2"
 testing-junit5 = "5.9.1"
-testing-junitext = "1.1.4-alpha05"
-testing-kotest = "5.5.4"
-testing-turbine = "0.12.3"
-uuid-multiplatform = "0.7.0"
+testing-junitext = "1.2.0-alpha01"
+testing-kotest = "5.6.2"
+testing-turbine = "1.0.0"
+uuid-multiplatform = "0.8.0"
 
 
 [plugins]
@@ -130,6 +131,7 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation", version.ref = "koin-android" }
 koin-androidx-workmanager = { module = "io.insert-koin:koin-androidx-workmanager", version.ref = "koin-android" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-core" }
+koin-core-coroutines = { group = "io.insert-koin", name = "koin-core-coroutines", version.ref = "koin-core-coroutines" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin-test" }
 korlibs-klock = { module = "com.soywiz.korlibs.klock:klock", version.ref = "korlibs-klock" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
