--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,41 +15,41 @@ versionCode = "1"
 versionName = "0.1"
 
 # Dependencies
-accompanist = "0.34.0"
+accompanist = "0.36.0"
 android-material = "1.12.0"
-androidx-activity = "1.9.0"
-androidx-compose = "1.7.0-beta05"
-androidx-compose-material3 = "1.2.1"
-androidx-compose-paging = "3.3.0"
+androidx-activity = "1.9.2"
+androidx-compose = "1.7.2"
+androidx-compose-material3 = "1.3.0"
+androidx-compose-paging = "3.3.2"
 androidx-constraintlayout = "1.0.1"
 androidx-core-ktx = "1.13.1"
-androidx-lifecycle = "2.8.3"
-androidx-navigation = "2.7.7"
+androidx-lifecycle = "2.8.6"
+androidx-navigation = "2.8.1"
 androidx-room = "2.6.1"
 chrisbanes-snapper = "0.3.0"
-coil = "2.6.0"
-desugar-jdk-libs = "2.0.4"
-gradle-plugin-android = "8.5.1"
+coil = "2.7.0"
+desugar-jdk-libs = "2.1.2"
+gradle-plugin-android = "8.5.2"
 gradle-plugin-buildkonfig = "0.15.1"
 gradle-plugin-dependency-check = "0.51.0"
 gradle-plugin-detekt = "1.23.6"
 gradle-plugin-ktlint = "11.0.0"
 gradle-plugin-spotless = "6.25.0"
 kermit = "2.0.4"
-kmp-nativecoroutines = "1.0.0-ALPHA-31"
-kmp-observableviewmodel = "1.0.0-BETA-3"
-koin-bom = "3.6.0-Beta5"
+kmp-nativecoroutines = "1.0.0-ALPHA-35"
+kmp-observableviewmodel = "1.0.0-BETA-5"
+koin-bom = "4.0.0"
 korlibs-klock = "2.2.0"
-kotlin = "2.0.0"
-kotlinx-coroutines = "1.9.0-RC"
-kotlinx-dateTime = "0.6.0"
-kotlinx-serialization = "1.7.1"
-ksp = "2.0.0-1.0.21"
+kotlin = "2.0.20"
+kotlinx-coroutines = "1.9.0"
+kotlinx-dateTime = "0.6.1"
+kotlinx-serialization = "1.7.3"
+ksp = "2.0.20-1.0.25"
 ktor = "2.3.12"
 kuuuurt-multiplatform-paging = "0.6.2"
-moko-resources = "0.24.1"
-multiplatformSettings = "1.1.1"
-realm = "2.1.0"
+moko-resources = "0.24.2"
+multiplatformSettings = "1.2.0"
+realm = "2.3.0"
 squareup-leakcanary = "2.14"
 squareup-okio = "3.9.0"
 testing-arch-core = "2.2.0"
@@ -58,7 +58,7 @@ testing-junit5 = "5.9.1"
 testing-junitext = "1.2.1"
 testing-kotest = "5.9.1"
 testing-turbine = "1.1.0"
-touchlab-skie = "0.8.2"
+touchlab-skie = "0.9.0-RC.3"
 uuid-multiplatform = "0.8.4"
 
 
